--- a/css/normalize.css
+++ b/css/normalize.css
@@ -21,6 +21,8 @@ html {
  */
 
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
 }
 
@@ -346,4 +348,93 @@ template {
 
 [hidden] {
   display: none;
+}
+
+root{
+  --grid-cols: 2;
+  --grid-rows: 2;
+  --square-height: 400px;
+  --square-width: 800px;
+}
+
+.grid-wrapper {
+  background-color: #FFFFFF;
+  width: calc(var(--grid-cols) * var(--square-width));
+  height: calc(var(--grid-rows) * var(--square-height));
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+}
+.grid-row {
+  height: var(--square-height);
+}
+.square-wrapper {
+  float: left;
+  width: var(--square-width);
+  height: var(--square-height);
+}
+.square {
+  -webkit-transition: -webkit-transform 0.1s;
+  -moz-transition: -moz-transform 0.1s;
+  -ms-transition: -ms-transform 0.1s;
+  transition: transform 0.1s;
+  width: 100%;
+  height: 100%;
+}
+.square:hover {
+   -webkit-transform: scale(1.25);
+   -moz-transform: scale(1.25);
+   -ms-transform: scale(1.25);
+   transform: scale(1.25);
+   -webkit-transition: -webkit-transform 0.25s;
+   -moz-transition: -moz-transform 0.25s;
+   -ms-transition:  -ms-transform 0.25s;
+   transition:  transform 0.25s;
+ }
+
+.red {
+   background-color: #EA522B;
+ }
+.green {
+   background-color: #83BC00;
+ }
+.blue {
+   background-color: #2FA1EF;
+ }
+.yellow {
+   background-color: #FBBC08;
+ }
+
+
+.purple{
+  -webkit-transition: -webkit-transform 0.1s;
+  -moz-transition: -moz-transform 0.1s;
+  -ms-transition:  -ms-transform 0.1s;
+  transition:  transform 0.1s;
+  width: 100%;
+  height: 100%;
+  background-color: purple;
+}
+
+.purple:hover {
+  -webkit-transform: scale(1.25);
+  -moz-transform: scale(1.25);
+  -ms-transform: scale(1.25);
+  transform: scale(1.25);
+  -webkit-transition: -webkit-transform 0.25s;
+  -moz-transition: -moz-transform 0.25s;
+  -ms-transition:  -ms-transform 0.25s;
+  transition:  transform 0.25s;
+}
+.center-wrapper{
+  background-color: #FFFFFF;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
 }
